Consistent indent between QWidgets/QML Titles

QML KCMs use AbstractPageHeader for their title, which have a
default indentation of Kirigami.Units.gridUnit

Use the same value for the QWidget's title left margin.

BUG: 460103
FIXED-IN: 5.27