core/ModuleView.cpp
@@ -41,6 +41,7 @@
 #include <KSharedConfig>
 #include <KStandardGuiItem>
 #include <KTitleWidget>
+#include <Kirigami/Units>
 
 #include <KActivities/ResourceInstance>
 
@@ -62,7 +63,8 @@ protected:
 CustomTitle::CustomTitle(QWidget *parent)
     : KTitleWidget(parent)
 {
-    setContentsMargins(style()->pixelMetric(QStyle::PM_LayoutLeftMargin),
+    // Use the same left margin as QML titles for consistency (Kirigami/AbstractPageHeader.qml)
+    setContentsMargins(Kirigami::Units().gridUnit(),
                        style()->pixelMetric(QStyle::PM_LayoutTopMargin),
                        style()->pixelMetric(QStyle::PM_LayoutRightMargin),
                        style()->pixelMetric(QStyle::PM_LayoutBottomMargin));
@@ -439,7 +441,7 @@ void ModuleView::activeModuleChanged(KPageWidgetItem *current, KPageWidgetItem *
                                     style()->pixelMetric(QStyle::PM_LayoutBottomMargin));
     d->mPageWidget->layout()->setSpacing(0);
     if (auto titleWidget = qobject_cast<KTitleWidget *>(d->mPageWidget->pageHeader())) {
-        titleWidget->layout()->setContentsMargins(style()->pixelMetric(QStyle::PM_LayoutLeftMargin),
+        titleWidget->layout()->setContentsMargins(Kirigami::Units().gridUnit(),
                                                   style()->pixelMetric(QStyle::PM_LayoutRightMargin),
                                                   style()->pixelMetric(QStyle::PM_LayoutRightMargin),
                                                   style()->pixelMetric(QStyle::PM_LayoutBottomMargin));
